--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.12.0", features = ["rt", "rt-multi-thread", "time", "macros"] }
+tokio = { version = "1.12.0", features = ["full"] }
 pretty_env_logger = "0.4.0"
 ring = "0.16.20"
 log = "0.4.14"
@@ -20,3 +20,8 @@ futures-util = "0.3.17"
 colored = "2.0.0"
 rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
 webpki = "*"
+dashmap = "4.0.2"
+bytes = "1.1.0"
+bincode = "1.3.3"
+serde_derive = "1.0.130"
+serde = "1.0.130"
