--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ serde_derive = "1.0.130"
 serde = "1.0.130"
 pin-utils = "0.1.0"
 libc = "0.2.106"
+clap = { version = "3.0.7", features = ["derive"] }
