--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ pin-utils = "0.1.0"
 libc = "0.2.106"
 clap = { version = "3.0.7", features = ["derive"] }
 byte-pool = "0.2.3"
+enum-as-inner = "0.3.3"
