--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ name = "rstun"
 version = "0.2.3"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["dylib", "lib"]
 
 [dependencies]
 tracing-subscriber = { version = "0.2.5", default-features = false, features = ["env-filter", "fmt", "ansi", "chrono"]}
@@ -27,3 +28,7 @@ pin-utils = "0.1.0"
 byte-pool = "0.2.3"
 enum-as-inner = "0.3.3"
 num_cpus = "1.13.1"
+
+[target.aarch64-linux-android.dependencies]
+jni = "0.19"
+android_logger = "0.10"
