--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,12 @@ pin-utils = "0.1.0"
 byte-pool = "0.2.3"
 enum-as-inner = "0.3.3"
 num_cpus = "1.13.1"
+rs-utilities = "0.1"
 
-#[target.aarch64-linux-android.dependencies]
+[target.aarch64-linux-android.dependencies]
+jni = "0.19"
+android_logger = "0.10"
+
+[target.armv7-linux-androideabi.dependencies]
 jni = "0.19"
 android_logger = "0.10"
