--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["dylib", "lib"]
 
 [dependencies]
-rustls = { version = "0.20.2", features = ["dangerous_configuration", "quic"] }
+rustls = { version = "0.20.6", features = ["dangerous_configuration", "quic"] }
 clap = { version = "3.0.7", features = ["derive"] }
 tokio = { version = "1.16", features = ["full"] }
 pretty_env_logger = "0.4.0"
@@ -27,7 +27,8 @@ byte-pool = "0.2.3"
 enum-as-inner = "0.3.3"
 num_cpus = "1.13.1"
 rs-utilities = "0.1"
-trust-dns-resolver = "0.22"
+trust-dns-resolver = { version = "0.22", features = ["dns-over-rustls"] }
+webpki-roots = "0.22"
 
 [target.aarch64-linux-android.dependencies]
 jni = "0.19"
