--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rstun"
-version = "0.2.7"
+version = "0.3.0"
 edition = "2021"
 
 [lib]
@@ -20,13 +20,13 @@ quinn-proto = "0.8.0"
 rcgen = "0.8.14"
 futures-util = "0.3.17"
 bincode = "1.3.3"
-serde_derive = "1.0.130"
-serde = "1.0.130"
 pin-utils = "0.1.0"
 byte-pool = "0.2.3"
 enum-as-inner = "0.3.3"
 num_cpus = "1.13.1"
 rs-utilities = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [target.aarch64-linux-android.dependencies]
 jni = "0.19"
