--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rstun"
-version = "0.3.2"
+version = "0.3.3"
 edition = "2021"
 
 [lib]
@@ -15,9 +15,8 @@ ring = "0.16.20"
 log = "0.4"
 chrono = "0.4"
 anyhow = "1.0"
-quinn = "0.8.5"
-quinn-proto = "0.8.4"
-rcgen = "0.9"
+quinn = "0.9.3"
+quinn-proto = "0.9.2"
 futures-util = "0.3"
 bincode = "1.3.3"
 pin-utils = "0.1.0"
@@ -35,3 +34,9 @@ android_logger = "0.11"
 [target.armv7-linux-androideabi.dependencies]
 jni = "0.19"
 android_logger = "0.11"
+
+[profile.release]
+opt-level = "z"
+strip = true
+lto = "fat"
+panic = "abort"
