--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,14 +20,15 @@ quinn-proto = "0.9.2"
 futures-util = "0.3"
 bincode = "1.3.3"
 pin-utils = "0.1.0"
-byte-pool = "0.2.3"
 enum-as-inner = "0.5"
 num_cpus = "1.13.1"
 rs-utilities = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rustls-platform-verifier = { git = "https://github.com/neevek/rustls-platform-verifier" }
+byte-pool = { git = "https://github.com/neevek/byte-pool" }
 x509-parser = "0.15"
+lazy_static = "1.4"
 
 [target.aarch64-linux-android.dependencies]
 jni = "0.19"
