--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,10 @@ byte-pool = { git = "https://github.com/neevek/byte-pool" }
 x509-parser = "0.15"
 lazy_static = "1.4"
 
+[dev-dependencies]
+jni = "0.19"
+android_logger = "0.11"
+
 [target.aarch64-linux-android.dependencies]
 jni = "0.19"
 android_logger = "0.11"
