--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,47 +1,48 @@
 [package]
 name = "rstun"
-version = "0.4.5"
+version = "0.4.6"
 edition = "2021"
 
 [lib]
 crate-type = ["dylib", "lib"]
 
 [dependencies]
-rustls = { version = "0.20", features = ["dangerous_configuration", "quic"] }
-clap = { version = "3.0.7", features = ["derive"] }
-rcgen = "0.10"
-tokio = { version = "1.21", features = ["full"] }
-pretty_env_logger = "0.4.0"
-ring = "0.16.20"
+rustls = { version = "0.21", features = ["dangerous_configuration", "quic"] }
+clap = { version = "4.4", features = ["derive"] }
+rcgen = "0.11"
+tokio = { version = "1.32", features = ["full"] }
+pretty_env_logger = "0.5.0"
+ring = "0.17"
 log = "0.4"
 chrono = "0.4"
 anyhow = "1.0"
-quinn = "0.9.3"
-quinn-proto = "0.9.2"
+quinn = "0.10"
+quinn-proto = "0.10"
 futures-util = "0.3"
 bincode = "1.3.3"
 pin-utils = "0.1.0"
-enum-as-inner = "0.5"
+enum-as-inner = "0.6"
 num_cpus = "1.13.1"
-rs-utilities = "0.3"
+rs-utilities = "0.3.8"
+# rs-utilities = { path = "../rs-utilities" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-rustls-platform-verifier = { git = "https://github.com/neevek/rustls-platform-verifier" }
+rustls-platform-verifier = { git = "https://github.com/rustls/rustls-platform-verifier" }
 byte-pool = { git = "https://github.com/neevek/byte-pool" }
 x509-parser = "0.15"
 lazy_static = "1.4"
 
-[dev-dependencies]
+# [dev-dependencies]
 jni = "0.19"
-android_logger = "0.11"
+android_logger = "0.13"
 
 [target.aarch64-linux-android.dependencies]
 jni = "0.19"
-android_logger = "0.11"
+android_logger = "0.13"
 
 [target.armv7-linux-androideabi.dependencies]
 jni = "0.19"
-android_logger = "0.11"
+android_logger = "0.13"
 
 [profile.release]
 opt-level = "z"
