--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,10 +65,11 @@ jobs:
           toolchain: stable
           target: x86_64-apple-darwin
           override: true
-      - run: cargo build --all-features --release && mkdir -p rstun-darwin-x86_64
-                                                  && mv target/release/rstunc ./rstun-darwin-x86_64/
-                                                  && mv target/release/rstund ./rstun-darwin-x86_64/
-                                                  && zip rstun-darwin-x86_64.zip ./rstun-darwin-x86_64/*
+      - run: rustup target add x86_64-apple-darwin && cargo build --all-features --release --target x86_64-apple-darwin
+                                                   && mkdir -p rstun-darwin-x86_64
+                                                   && mv target/x86_64-apple-darwin/release/rstunc ./rstun-darwin-x86_64/
+                                                   && mv target/x86_64-apple-darwin/release/rstund ./rstun-darwin-x86_64/
+                                                   && zip rstun-darwin-x86_64.zip ./rstun-darwin-x86_64/*
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
