--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          target: x86_64-unknown-linux-musl
+          target: x86_64-unknown-linux-gnu
           override: true
       - run: cargo build --all-features --release && mkdir -p rstun-linux-x86_64
                                                   && mv target/release/rstunc ./rstun-linux-x86_64/
@@ -26,6 +26,30 @@ jobs:
         with:
           files: |
             rstun-linux-x86_64.tar.gz
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  linux-musl-x86_64:
+    name: Linux musl x86_64
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: x86_64-unknown-linux-musl
+          override: true
+      - run: sudo apt-get -y install musl-tools && rustup target add x86_64-unknown-linux-musl && cargo build --all-features --release --target x86_64-unknown-linux-musl
+                                                         && mkdir -p rstun-linux-musl-x86_64
+                                                         && mv target/x86_64-unknown-linux-musl/release/rstunc ./rstun-linux-musl-x86_64/
+                                                         && mv target/x86_64-unknown-linux-musl/release/rstund ./rstun-linux-musl-x86_64/
+                                                         && tar zcf rstun-linux-musl-x86_64.tar.gz ./rstun-linux-musl-x86_64/*
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            rstun-linux-musl-x86_64.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
