--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
       "request": "launch",
       "program": "${workspaceFolder}/target/debug/rstunc",
       "args": [
-        "-mOUT", "-r127.0.0.1:9701", "-p1234", "-a0.0.0.0:9500^ANY", "-lD"
+        "-mOUT", "-a127.0.0.1:9701", "-p1234", "-t0.0.0.0:9500^ANY", "-lD"
       ],
       "cwd": "${workspaceFolder}",
       "sourceLanguages": ["rust"],
