--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,8 @@ on:
       - 'release/*'
 
 jobs:
-  linux-x86_64:
-    name: Linux x86_64
+  linux-gnu-x86_64:
+    name: Linux gnu x86_64
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -16,16 +16,16 @@ jobs:
           toolchain: stable
           target: x86_64-unknown-linux-gnu
           override: true
-      - run: cargo build --all-features --release && mkdir -p rstun-linux-x86_64
-                                                  && mv target/release/rstunc ./rstun-linux-x86_64/
-                                                  && mv target/release/rstund ./rstun-linux-x86_64/
-                                                  && tar zcf rstun-linux-x86_64.tar.gz ./rstun-linux-x86_64/*
+      - run: cargo build --all-features --release && mkdir -p rstun-linux-gnu-x86_64
+                                                  && mv target/release/rstunc ./rstun-linux-gnu-x86_64/
+                                                  && mv target/release/rstund ./rstun-linux-gnu-x86_64/
+                                                  && tar zcf rstun-linux-gnu-x86_64.tar.gz ./rstun-linux-gnu-x86_64/*
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            rstun-linux-x86_64.tar.gz
+            rstun-linux-gnu-x86_64.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -79,6 +79,35 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  windows-arm64:
+    name: Windows ARM64
+    runs-on: windows-latest
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: aarch64-pc-windows-msvc
+          override: true
+      - run: cargo build --target aarch64-pc-windows-msvc --all-features --release 
+      - run: |
+          mkdir -p rstun-windows-arm64
+          mv target/aarch64-pc-windows-msvc/release/rstunc.exe ./rstun-windows-arm64/
+          mv target/aarch64-pc-windows-msvc/release/rstund.exe ./rstun-windows-arm64/
+          7z a rstun-windows-arm64.zip ./rstun-windows-arm64/*
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            rstun-windows-arm64.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
   darwin-x86_64:
     name: Darwin x86_64
     runs-on: macos-latest
@@ -127,8 +156,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  linux-armv7:
-    name: Linux ARMv7
+  linux-gnueabihf-armv7:
+    name: Linux Gnueabihf ARMv7
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -139,21 +168,121 @@ jobs:
           override: true
       - run: rustup target add armv7-unknown-linux-gnueabihf && cargo install cross --git https://github.com/cross-rs/cross
                                                              && cross build --all-features --release --target armv7-unknown-linux-gnueabihf
-                                                             && mkdir -p rstun-linux-armv7
-                                                             && mv target/armv7-unknown-linux-gnueabihf/release/rstunc ./rstun-linux-armv7/
-                                                             && mv target/armv7-unknown-linux-gnueabihf/release/rstund ./rstun-linux-armv7/
-                                                             && tar zcf rstun-linux-armv7.tar.gz ./rstun-linux-armv7/*
+                                                             && mkdir -p rstun-linux-gnueabihf-armv7
+                                                             && mv target/armv7-unknown-linux-gnueabihf/release/rstunc ./rstun-linux-gnueabihf-armv7/
+                                                             && mv target/armv7-unknown-linux-gnueabihf/release/rstund ./rstun-linux-gnueabihf-armv7/
+                                                             && tar zcf rstun-linux-gnueabihf-armv7.tar.gz ./rstun-linux-gnueabihf-armv7/*
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            rstun-linux-armv7.tar.gz
+            rstun-linux-gnueabihf-armv7.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  linux-aarch64:
-    name: Linux Aarch64
+  linux-musleabihf-armv7:
+    name: Linux Musleabihf ARMv7
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: armv7-unknown-linux-musleabihf
+          override: true
+      - run: rustup target add armv7-unknown-linux-musleabihf && cargo install cross --git https://github.com/cross-rs/cross
+                                                             && cross build --all-features --release --target armv7-unknown-linux-musleabihf
+                                                             && mkdir -p rstun-linux-musleabihf-armv7
+                                                             && mv target/armv7-unknown-linux-musleabihf/release/rstunc ./rstun-linux-musleabihf-armv7/
+                                                             && mv target/armv7-unknown-linux-musleabihf/release/rstund ./rstun-linux-musleabihf-armv7/
+                                                             && tar zcf rstun-linux-musleabihf-armv7.tar.gz ./rstun-linux-musleabihf-armv7/*
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            rstun-linux-musleabihf-armv7.tar.gz
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  linux-musleabi-armv7:
+    name: Linux Musleabi ARMv7
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: armv7-unknown-linux-musleabi
+          override: true
+      - run: rustup target add armv7-unknown-linux-musleabi && cargo install cross --git https://github.com/cross-rs/cross
+                                                             && cross build --all-features --release --target armv7-unknown-linux-musleabi
+                                                             && mkdir -p rstun-linux-musleabi-armv7
+                                                             && mv target/armv7-unknown-linux-musleabi/release/rstunc ./rstun-linux-musleabi-armv7/
+                                                             && mv target/armv7-unknown-linux-musleabi/release/rstund ./rstun-linux-musleabi-armv7/
+                                                             && tar zcf rstun-linux-musleabi-armv7.tar.gz ./rstun-linux-musleabi-armv7/*
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            rstun-linux-musleabi-armv7.tar.gz
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  linux-gnueabi-armv7:
+    name: Linux Gnueabi ARMv7
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: armv7-unknown-linux-gnueabi
+          override: true
+      - run: rustup target add armv7-unknown-linux-gnueabi && cargo install cross --git https://github.com/cross-rs/cross
+                                                             && cross build --all-features --release --target armv7-unknown-linux-gnueabi
+                                                             && mkdir -p rstun-linux-gnueabi-armv7
+                                                             && mv target/armv7-unknown-linux-gnueabi/release/rstunc ./rstun-linux-gnueabi-armv7/
+                                                             && mv target/armv7-unknown-linux-gnueabi/release/rstund ./rstun-linux-gnueabi-armv7/
+                                                             && tar zcf rstun-linux-gnueabi-armv7.tar.gz ./rstun-linux-gnueabi-armv7/*
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            rstun-linux-gnueabi-armv7.tar.gz
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  linux-musleabi-armv5:
+    name: Linux Musleabi ARMv5
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: arm-unknown-linux-musleabi
+          override: true
+      - run: rustup target add arm-unknown-linux-musleabi && cargo install cross --git https://github.com/cross-rs/cross
+                                                             && cross build --all-features --release --target arm-unknown-linux-musleabi
+                                                             && mkdir -p rstun-linux-armv5
+                                                             && mv target/arm-unknown-linux-musleabi/release/rstunc ./rstun-linux-armv5/
+                                                             && mv target/arm-unknown-linux-musleabi/release/rstund ./rstun-linux-armv5/
+                                                             && tar zcf rstun-linux-armv5.tar.gz ./rstun-linux-armv5/*
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            rstun-linux-armv5.tar.gz
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  linux-gnu-aarch64:
+    name: Linux gnu Aarch64
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
