add support for multiple tcp and udp tunnels

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rstun"
-version = "0.6.9"
+version = "0.7.0"
 edition = "2021"
 
 [lib]
@@ -35,6 +35,7 @@ rustls-pemfile = "2.1"
 bytes = "1"
 backon = "1.2"
 dashmap = "6"
+ctrlc = "3.4"
 
 [dev-dependencies]
 jni = "0.21"
