--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ ring = "0.17"
 log = "0.4"
 chrono = "0.4"
 anyhow = "1.0"
-quinn = "0.11.8"
+# quinn = "0.11.8"
+quinn = { git = "https://github.com/neevek/quinn", branch = "fix-rebind" } # based on 0.11.8
 quinn-proto = "0.11.12"
 futures-util = "0.3"
 bincode = { version = "2", features = ["serde"] }
