--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rstun"
-version = "0.7.7"
-edition = "2021"
+version = "0.7.8"
+edition = "2024"
 
 [lib]
 crate-type = ["lib"]
@@ -16,21 +16,20 @@ ring = "0.17"
 log = "0.4"
 chrono = "0.4"
 anyhow = "1.0"
-# quinn = "0.11.8"
-quinn = { git = "https://github.com/neevek/quinn", branch = "fix-rebind" } # based on 0.11.8
-quinn-proto = "0.11.12"
+quinn = "0.11.9"
+quinn-proto = "0.11.13"
 futures-util = "0.3"
 bincode = { version = "2", features = ["serde"] }
 pin-utils = "0.1.0"
 enum-as-inner = "0.6"
 num_cpus = "1.17"
-rs-utilities = "0.4.4"
+rs-utilities = "0.5"
 # rs-utilities = { path = "../rs-utilities" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rustls-platform-verifier = "0.6.0"
 byte-pool = { git = "https://github.com/neevek/byte-pool" }
-x509-parser = "0.17"
+x509-parser = "0.18"
 lazy_static = "1.5"
 rustls-pemfile = "2.2"
 bytes = "1"
