--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,206 +1,108 @@
-name: Rust
+name: release
 
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+      - "v*"
+
+permissions:
+  contents: write
 
 jobs:
-  linux-x86_64:
-    name: Linux x86_64
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: x86_64-unknown-linux-gnu
-          override: true
-      - run: cargo build --all-features --release && mkdir -p rstun-linux-x86_64
-                                                  && mv target/release/rstunc ./rstun-linux-x86_64/
-                                                  && mv target/release/rstund ./rstun-linux-x86_64/
-                                                  && tar zcf rstun-linux-x86_64.tar.gz ./rstun-linux-x86_64/*
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            rstun-linux-x86_64.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  build:
+    name: build ${{ matrix.target }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: macos-latest
+            target: x86_64-apple-darwin
+          - os: macos-latest
+            target: aarch64-apple-darwin
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+            needs_musl: true
+          - os: ubuntu-latest
+            target: armv7-unknown-linux-gnueabihf
+            use_cross: true
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            use_cross: true
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-musl
+            needs_musl: true
+            use_cross: true
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
 
-  linux-musl-x86_64:
-    name: Linux musl x86_64
-    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: x86_64-unknown-linux-musl
-          override: true
-      - run: sudo apt-get -y install musl-tools && rustup target add x86_64-unknown-linux-musl && cargo build --all-features --release --target x86_64-unknown-linux-musl
-                                                         && mkdir -p rstun-linux-musl-x86_64
-                                                         && mv target/x86_64-unknown-linux-musl/release/rstunc ./rstun-linux-musl-x86_64/
-                                                         && mv target/x86_64-unknown-linux-musl/release/rstund ./rstun-linux-musl-x86_64/
-                                                         && tar zcf rstun-linux-musl-x86_64.tar.gz ./rstun-linux-musl-x86_64/*
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            rstun-linux-musl-x86_64.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v4
 
-  windows-x86_64:
-    name: Windows x86_64
-    runs-on: windows-latest
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
-          target: x86_64-pc-windows-msvc
-          override: true
-      - run: cargo build --all-features --release && mkdir -p rstun-windows-x86_64
-                                                  && mv target/release/rstunc.exe ./rstun-windows-x86_64/
-                                                  && mv target/release/rstund.exe ./rstun-windows-x86_64/
-                                                  && 7z a rstun-windows-x86_64.zip ./rstun-windows-x86_64/*
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            rstun-windows-x86_64.zip
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          targets: ${{ matrix.target }}
 
-  darwin-x86_64:
-    name: Darwin x86_64
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: x86_64-apple-darwin
-          override: true
-      - run: rustup target add x86_64-apple-darwin && cargo build --all-features --release --target x86_64-apple-darwin
-                                                   && mkdir -p rstun-darwin-x86_64
-                                                   && mv target/x86_64-apple-darwin/release/rstunc ./rstun-darwin-x86_64/
-                                                   && mv target/x86_64-apple-darwin/release/rstund ./rstun-darwin-x86_64/
-                                                   && zip rstun-darwin-x86_64.zip ./rstun-darwin-x86_64/*
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            rstun-darwin-x86_64.zip
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            
-  darwin-aarch64:
-    name: Darwin Aarch64
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: aarch64-apple-darwin
-          override: true
-      - run: rustup target add aarch64-apple-darwin && cargo build --all-features --release --target aarch64-apple-darwin
-                                                    && mkdir -p rstun-darwin-aarch64
-                                                    && mv target/aarch64-apple-darwin/release/rstunc ./rstun-darwin-aarch64/
-                                                    && mv target/aarch64-apple-darwin/release/rstund ./rstun-darwin-aarch64/
-                                                    && zip rstun-darwin-aarch64.zip ./rstun-darwin-aarch64/*
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            rstun-darwin-aarch64.zip
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install musl tools
+        if: matrix.needs_musl
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install musl-tools
 
-  linux-armv7:
-    name: Linux ARMv7
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: armv7-unknown-linux-gnueabihf
-          override: true
-      - run: rustup target add armv7-unknown-linux-gnueabihf && cargo install cross --git https://github.com/cross-rs/cross
-                                                             && cross build --all-features --release --target armv7-unknown-linux-gnueabihf
-                                                             && mkdir -p rstun-linux-armv7
-                                                             && mv target/armv7-unknown-linux-gnueabihf/release/rstunc ./rstun-linux-armv7/
-                                                             && mv target/armv7-unknown-linux-gnueabihf/release/rstund ./rstun-linux-armv7/
-                                                             && tar zcf rstun-linux-armv7.tar.gz ./rstun-linux-armv7/*
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            rstun-linux-armv7.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install cross
+        if: matrix.use_cross
+        run: cargo install cross --git https://github.com/cross-rs/cross
 
-  linux-aarch64:
-    name: Linux Aarch64
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: aarch64-unknown-linux-gnu
-          override: true
-      - run: rustup target add aarch64-unknown-linux-gnu && cargo install cross --git https://github.com/cross-rs/cross
-                                                         && cross build --all-features --release --target aarch64-unknown-linux-gnu
-                                                         && mkdir -p rstun-linux-aarch64
-                                                         && mv target/aarch64-unknown-linux-gnu/release/rstunc ./rstun-linux-aarch64/
-                                                         && mv target/aarch64-unknown-linux-gnu/release/rstund ./rstun-linux-aarch64/
-                                                         && tar zcf rstun-linux-aarch64.tar.gz ./rstun-linux-aarch64/*
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            rstun-linux-aarch64.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
-  linux-musl-aarch64:
-    name: Linux musl Aarch64
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: aarch64-unknown-linux-musl
-          override: true
-      - run: sudo apt-get -y install musl-tools && rustup target add aarch64-unknown-linux-musl
-      - run: cargo install cross --git https://github.com/cross-rs/cross
-      - run: cross build --all-features --release --target aarch64-unknown-linux-musl
-      - run: mkdir -p rstun-linux-musl-aarch64
-      - run: mv target/aarch64-unknown-linux-musl/release/rstunc ./rstun-linux-musl-aarch64/
-      - run: mv target/aarch64-unknown-linux-musl/release/rstund ./rstun-linux-musl-aarch64/
-      - run: tar zcf rstun-linux-musl-aarch64.tar.gz ./rstun-linux-musl-aarch64/*
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            rstun-linux-musl-aarch64.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build (cross)
+        if: matrix.use_cross
+        run: cross build --all-features --release --target ${{ matrix.target }}
 
+      - name: Build
+        if: ${{ !matrix.use_cross }}
+        run: cargo build --all-features --release --target ${{ matrix.target }}
 
+      - name: Package (macOS/Linux)
+        if: runner.os != 'Windows'
+        run: |
+          set -euo pipefail
+          bin_names=(rstunc rstund)
+          target_dir="target/${{ matrix.target }}/release"
+          pkg_name="rstun-${{ matrix.target }}"
+          mkdir -p dist
+          for bin_name in "${bin_names[@]}"; do
+            cp "${target_dir}/${bin_name}" "dist/${bin_name}"
+          done
+          tar -czf "dist/${pkg_name}.tar.gz" -C dist "${bin_names[@]}"
+          for bin_name in "${bin_names[@]}"; do
+            rm -f "dist/${bin_name}"
+          done
+          if command -v shasum >/dev/null 2>&1; then
+            shasum -a 256 "dist/${pkg_name}.tar.gz" > "dist/SHA256SUMS-${{ matrix.target }}.txt"
+          else
+            sha256sum "dist/${pkg_name}.tar.gz" > "dist/SHA256SUMS-${{ matrix.target }}.txt"
+          fi
+
+      - name: Package (Windows)
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          $binNames = @("rstunc.exe", "rstund.exe")
+          $targetDir = "target/${{ matrix.target }}/release"
+          $pkgName = "rstun-${{ matrix.target }}"
+          New-Item -ItemType Directory -Force -Path dist | Out-Null
+          foreach ($binName in $binNames) {
+            Copy-Item "$targetDir/$binName" "dist/$binName"
+          }
+          Compress-Archive -Path "dist/*.exe" -DestinationPath "dist/$pkgName.zip" -Force
+          Get-ChildItem dist -Filter "*.exe" | Remove-Item
+          $hash = Get-FileHash "dist/$pkgName.zip" -Algorithm SHA256
+          "$($hash.Hash)  $pkgName.zip" | Out-File -Encoding ascii "dist/SHA256SUMS-${{ matrix.target }}.txt"
+
+      - name: Upload release assets
+        uses: softprops/action-gh-release@v2
+        with:
+          files: dist/*
+          make_latest: true
